-Xloggc:<file> incorrectly enables TraceClassUnloading causing tracing on tty

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • hs21
    • Affects Version/s: 7
    • Component/s: hotspot
    • None
    • gc
    • b12
    • generic
    • generic
    • Not verified

        While running the crypto benchmarks with -Xloggc I obtained the following tracing on stdout:

        --- --- --- --- --- --- --- --- ---

          Benchmark: crypto.aes
          Run mode: timed run
          Test type: multi
          Threads: 64
          Warmup: 120s
          Iterations: 1
          Run length: 240s

        Warmup (120s) begins: Thu Apr 28 11:13:45 PDT 2011
        [Unloading class sun.reflect.GeneratedConstructorAccessor43]
        [Unloading class sun.reflect.GeneratedConstructorAccessor17]
        [Unloading class sun.reflect.GeneratedConstructorAccessor39]
        [Unloading class sun.reflect.GeneratedConstructorAccessor6]
        [Unloading class sun.reflect.GeneratedConstructorAccessor14]
        [Unloading class sun.reflect.GeneratedConstructorAccessor16]
        [Unloading class sun.reflect.GeneratedConstructorAccessor36]
        [Unloading class sun.reflect.GeneratedConstructorAccessor30]
        [Unloading class sun.reflect.GeneratedConstructorAccessor11]
        [Unloading class sun.reflect.GeneratedConstructorAccessor40]
        [Unloading class sun.reflect.GeneratedConstructorAccessor10]
        [Unloading class sun.reflect.GeneratedConstructorAccessor22]
        [Unloading class sun.reflect.GeneratedConstructorAccessor50]
        [Unloading class sun.reflect.GeneratedConstructorAccessor20]
        [Unloading class sun.reflect.GeneratedConstructorAccessor31]
        [Unloading class sun.reflect.GeneratedConstructorAccessor35]
        [Unloading class sun.reflect.GeneratedConstructorAccessor41]
        [Unloading class sun.reflect.GeneratedConstructorAccessor48]
        [Unloading class sun.reflect.GeneratedConstructorAccessor47]
        [Unloading class sun.reflect.GeneratedConstructorAccessor52]
        [Unloading class sun.reflect.GeneratedConstructorAccessor34]
        [Unloading class sun.reflect.GeneratedConstructorAccessor42]
        [Unloading class sun.reflect.GeneratedConstructorAccessor29]
        [Unloading class sun.reflect.GeneratedConstructorAccessor23]
        [Unloading class sun.reflect.GeneratedConstructorAccessor32]
        [Unloading class sun.reflect.GeneratedConstructorAccessor53]
        [Unloading class sun.reflect.GeneratedConstructorAccessor46]
        [Unloading class sun.reflect.GeneratedConstructorAccessor51]
        [Unloading class sun.reflect.GeneratedConstructorAccessor27]
        [Unloading class sun.reflect.GeneratedConstructorAccessor26]
        [Unloading class sun.reflect.GeneratedConstructorAccessor28]
        [Unloading class sun.reflect.GeneratedConstructorAccessor7]
        [Unloading class sun.reflect.GeneratedConstructorAccessor5]
        [Unloading class sun.reflect.GeneratedConstructorAccessor9]
        [Unloading class sun.reflect.GeneratedConstructorAccessor18]
        [Unloading class sun.reflect.GeneratedConstructorAccessor13]
        [Unloading class sun.reflect.GeneratedConstructorAccessor15]
        [Unloading class sun.reflect.GeneratedConstructorAccessor3]
        [Unloading class sun.reflect.GeneratedConstructorAccessor4]
        [Unloading class sun.reflect.GeneratedConstructorAccessor33]
        [Unloading class sun.reflect.GeneratedConstructorAccessor37]
        [Unloading class sun.reflect.GeneratedConstructorAccessor8]
        [Unloading class sun.reflect.GeneratedConstructorAccessor25]
        [Unloading class sun.reflect.GeneratedConstructorAccessor56]
        [Unloading class sun.reflect.GeneratedConstructorAccessor12]
        [Unloading class sun.reflect.GeneratedConstructorAccessor19]
        [Unloading class sun.reflect.GeneratedConstructorAccessor44]
        [Unloading class sun.reflect.GeneratedConstructorAccessor21]
        [Unloading class sun.reflect.GeneratedConstructorAccessor49]

        with both products and fastdebug builds.

        The flags I ran with are:

        -d64 -server -XX:+UnlockDiagnosticVMOptions -XX:-EnableInvokeDynamic -XX:+PrintGCDetails -XX:-PrintGCTimeStamps -XX:+PrintGC -XX:+PrintReferenceGC -Xloggc:/home/jc234399/SPECjvm2008/gclogs_with_fix/gclog.$$.$n -jar SPECjvm2008.jar -ikv crypto.aes crypto.rsa crypto.signverify

              Assignee:
              John Cuthbertson
              Reporter:
              John Cuthbertson
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: