7040410: -Xloggc:<file> incorrectly enables TraceClassUnloading causing tracing on tty

Don't enable TraceClassUnloading whne -Xloggc is specified.

Reviewed-by: tonyp, ysr